crates/swc_ecma_parser/tests/jsx/errors/adjacent-tags/input.js.stderr
error: Unterminated regexp literal
 --> $DIR/tests/jsx/errors/adjacent-tags/input.js:1:32
  |
1 | var x = <div>one</div><div>two</div>;
  |                                ^^^^^^

